Add locale-aware trailers to details pages
